disable extra color (fix strange rendering on overflow scroll)

--- a/application/style.css
+++ b/application/style.css
@@ -544,8 +544,6 @@ product-publication { /* right panel for editing product stuffs */
 
     padding: 25px;
     overflow-y: auto;
-
-    background-color: #232729;
 }
 
 product-publication .publication-header {
